--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -9,6 +9,8 @@
 // Pages styles
 
 @import "./pages/home.scss";
+@import "./pages/products.scss";
+@import "./pages/addProductPage.scss";
 
 // Responsive pages
 
