--- a/src/sass/common/common.scss
+++ b/src/sass/common/common.scss
@@ -14,6 +14,32 @@
   padding: 0;
 }
 
+.line-below{
+  position: relative;
+  &::after{
+    position: absolute;
+    bottom: .35rem;
+    left: 0;
+    content: "";
+    width: 100%;
+    height: .15rem;
+    background-color: #e6e6e6;
+  }
+}
+
+.left-line{
+  position: relative;
+  &::after{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    content: "";
+    width: .1rem;
+    height: 100%;
+    background-color: #e6e6e6;
+  }
+}
+
 .header{
   max-width: 100%;
   height: 4.5rem;
