--- a/src/sass/common/common.scss
+++ b/src/sass/common/common.scss
@@ -23,7 +23,7 @@
     content: "";
     width: 100%;
     height: .15rem;
-    background-color: #e6e6e6;
+    background-color: $line-after-color;
   }
 }
 
@@ -36,18 +36,24 @@
     content: "";
     width: .1rem;
     height: 100%;
-    background-color: #e6e6e6;
+    background-color: $line-after-color;
   }
 }
 
 .header{
   max-width: 100%;
+  width: 100%;
   height: 4.5rem;
-  position: relative;
+  position: sticky;
+  left: 0;
+  top: 0;
   padding: 0;
+  z-index: 1010;
+
   h1{
     cursor: default;
   }
+
   .nav-link{
     font-size: 1.15rem;
     position: relative;
@@ -55,7 +61,7 @@
     &::after{
       content: "";
       position: absolute;
-      background-color: #e6e6e6;
+      background-color: $line-after-color;
       width: 0;
       height: .15rem;
       left: 0;
@@ -70,10 +76,35 @@
   &::after{
     content: "";
       position: absolute;
-      background-color: #d4d4d4;
+      background-color: $line-after-color;
       width: 100%;
       height: .05rem;
-      bottom: 0rem;
+      bottom: .5rem;
       transition: .35s ease-in-out;
   }
+}
+
+#password{
+  padding-right: 10%;
+}
+.password-div{
+  div{
+    right: .2rem;
+    bottom: -.4rem;
+    height: min-content;
+    width: min-content;
+    cursor: pointer;
+    i{
+      color: $dark-bg-black;
+      font-size: 2.25rem;
+    }
+  }
+}
+
+.dark-background-black{
+  background-color: $dark-bg-black !important;
+}
+
+.hide{
+  display: none !important;
 }
