--- a/src/sass/common/common.scss
+++ b/src/sass/common/common.scss
@@ -14,6 +14,21 @@
   padding: 0;
 }
 
+#navigation-loader{
+  position: fixed;
+  z-index: 1020;
+  min-height: 100vh;
+  min-height: 100dvh;
+  width: 100%;
+  top: 0;
+  left: 0;
+  background-color: #00000044;
+  .spinner-border{
+    width: 5rem;
+    height: 5rem;
+  }
+}
+
 .line-below{
   position: relative;
   &::after{
